<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro_fondo">

    <!-- Formulario de datos de tarjeta -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Número de Tarjeta -->
        <TextView
            style="@style/EstiloLabelTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_numero_tarjeta" />

        <EditText
            android:id="@+id/etNumeroTarjeta"
            style="@style/EstiloInputTarjeta"
            android:hint="@string/hint_numero_tarjeta"
            android:inputType="number"
            android:maxLength="19" />

        <!-- Fila para Fecha MM/AA y Código de Seguridad -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- MM/AA -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/EstiloLabelTarjeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_expiracion" />

                <EditText
                    android:id="@+id/etExpiracion"
                    style="@style/EstiloInputTarjeta"
                    android:hint="@string/hint_expiracion"
                    android:inputType="datetime"
                    android:maxLength="5" />
            </LinearLayout>

            <!-- Codigo de seguridad -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/EstiloLabelTarjeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cvv" />

                <EditText
                    android:id="@+id/etCvv"
                    style="@style/EstiloInputTarjeta"
                    android:hint="@string/hint_cvv"
                    android:inputType="numberPassword"
                    android:maxLength="4" />
            </LinearLayout>

        </LinearLayout>

        <!-- Botón Terminar Pago -->
        <Button
            android:id="@+id/btnTerminarPago"
            style="@style/EstiloBotonTerminarPago"
            android:text="@string/btn_terminar_pago" />

    </LinearLayout>

</RelativeLayout>