<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EstiloFilaHistorial">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNombreHistorial"
            style="@style/EstiloNombreHistorial"
            android:text="@string/nombre_producto_placeholder" />

        <TextView
            android:id="@+id/txtFechaHistorial"
            style="@style/EstiloFechaHistorial"
            android:text="@string/fecha_placeholder" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMontoHistorial"
        style="@style/EstiloMontoHistorial"
        android:text="@string/monto_placeholder" />

</LinearLayout>