<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/gris_facturacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ap_550bk"
            android:contentDescription="@string/desc_imagen_producto_grid" />

        <TextView
            android:id="@+id/txtNombre"
            style="@style/EstiloNombreProductoGrid"
            android:text="@string/nombre_producto_grid_placeholder" />

        <TextView
            android:id="@+id/txtDescripcion"
            style="@style/EstiloDescripcionProductoGrid"
            android:text="@string/descripcion_corta_placeholder" />

        <TextView
            android:id="@+id/txtPrecio"
            style="@style/EstiloPrecioProductoGrid"
            android:text="@string/precio_placeholder" />
    </LinearLayout>
</androidx.cardview.widget.CardView>