<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:weightSum="5">

    <!-- Columna 1: Imagen -->
    <ImageView
        android:id="@+id/imgItemCarrito"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/a168"
        android:contentDescription="@string/desc_imagen_item_carrito" />

    <!-- Columna 2: Nombre del producto -->
    <TextView
        android:id="@+id/txtNombreItemCarrito"
        style="@style/EstiloNombreFilaCarrito"
        android:text="@string/texto_nombre_placeholder" />

    <!-- Columna 3: Precio Unitario -->
    <TextView
        android:id="@+id/txtPrecioItemCarrito"
        style="@style/EstiloPrecioFilaCarrito"
        android:text="@string/texto_precio_placeholder" />

    <!-- Columna 4: Cantidad -->
    <TextView
        android:id="@+id/txtCantidadItemCarrito"
        style="@style/EstiloCantidadFilaCarrito"
        android:text="@string/texto_cantidad_placeholder" />

    <!-- Columna 5: Subtotal -->
    <TextView
        android:id="@+id/txtSubtotalItemCarrito"
        style="@style/EstiloSubtotalFilaCarrito"
        android:text="@string/texto_precio_placeholder" />

</LinearLayout>