<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="@color/blanco"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/imgFlechaNotificacion"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFechaNotificacion"
                style="@style/EstiloFechaNotificacion"
                android:text="@string/fecha_notificacion_placeholder" />

            <TextView
                android:id="@+id/tvMensajeNotificacion"
                style="@style/EstiloMensajeNotificacion"
                android:text="@string/mensaje_notificacion_placeholder" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgFlechaNotificacion"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/desc_flecha_notificacion"
            app:tint="@color/azul_flecha_notificacion" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>